--- a/src/app/shared/components/question/question-modal.component.html
+++ b/src/app/shared/components/question/question-modal.component.html
@@ -25,5 +25,5 @@
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-light" (click)="decline()"><i class="fas fa-times"></i> No</button>
-  <button type="button" class="btn btn-primary" (click)="confirm()"><i class="fas fa-check"></i> Yes</button>
+  <button type="button" class="btn btn-primary" (click)="confirm()"><i class="fas fa-check"></i> Si</button>
 </div>
